Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm
@@ -240,8 +240,6 @@ WEBCORE_COMMAND(pageUp)
 WEBCORE_COMMAND(pageUpAndModifySelection)
 WEBCORE_COMMAND(paste)
 WEBCORE_COMMAND(pasteAsPlainText)
-WEBCORE_COMMAND(scrollPageDown)
-WEBCORE_COMMAND(scrollPageUp)
 WEBCORE_COMMAND(scrollLineDown)
 WEBCORE_COMMAND(scrollLineUp)
 WEBCORE_COMMAND(scrollToBeginningOfDocument)
@@ -264,6 +262,26 @@ WEBCORE_COMMAND(yank)
 WEBCORE_COMMAND(yankAndSelect)
 
 #undef WEBCORE_COMMAND
+
+- (void)scrollPageDown:(id)sender
+{
+    if (_impl->page().preferences().eventHandlerDrivenSmoothKeyboardScrollingEnabled()) {
+        [self.nextResponder tryToPerform:_cmd with:sender];
+        return;
+    }
+
+    _impl->executeEditCommandForSelector(_cmd);
+}
+
+- (void)scrollPageUp:(id)sender
+{
+    if (_impl->page().preferences().eventHandlerDrivenSmoothKeyboardScrollingEnabled()) {
+        [self.nextResponder tryToPerform:_cmd with:sender];
+        return;
+    }
+
+    _impl->executeEditCommandForSelector(_cmd);
+}
 
 - (BOOL)writeSelectionToPasteboard:(NSPasteboard *)pasteboard types:(NSArray *)types
 {
